<resources>
    <string name="app_name">HabitSaga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="stats">Statistics</string>
    <string name="profile">Profile</string>
    <string name="add_task">Add Task…</string>
    <string name="failed_to_load_data">Failed to Load Data</string>
    <string name="completed">Completed\n</string>
    <string name="incomplete">Incomplete\n</string>
    <string name="tasks">Tasks\n</string>
    <string name="level">Level %s</string>
    <string name="coin">%s coins</string>
    <string name="exp_progress">%s/100 XP</string>
    <string name="unauthorized">[Unauthorized]</string>
    <string name="diagonal_shade">Diagonal Shade</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="start">START!</string>
    <string name="pd_board">Pomodoro Board</string>
    <string name="sessions">SESSIONS</string>
    <string name="reset">RESET</string>
    <string name="inventory">INVENTORY</string>
    <string name="shop">SHOP</string>
    <string name="settings">SETTINGS</string>
    <string name="loading">Loading…</string>
    <string name="item_image">Item Image</string>
    <string name="task_management">Task Management</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="characters">Characters</string>
    <string name="accessories">Accessories</string>
    <string name="buy">BUY</string>
    <string name="equip">Equip</string>
    <string name="_3d_support">3D Support</string>
    <string name="completed_task">Completed Task: %d</string>
    <string name="incomplete_task">Incomplete Task: %d</string>
    <string name="sort">Sort</string>
    <string name="done">Done</string>
    <string name="edit_task">Edit Task</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="enter_task_category">Enter task category</string>
    <string name="due_date">Due Date</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="owned">OWNED</string>
    <string name="btnreset">Reset</string>
    <string name="report_progress">Report Progress</string>
    <string name="daily">Daily</string>
</resources>