<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pomodoro"
    tools:context=".ui.pomodoro.PomodoroActivity">

    <ImageView
        android:id="@+id/board"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/pd_board"
        android:src="@drawable/pd_board"
        android:scaleType="fitXY"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/timerProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:indeterminateOnly="false"
        android:max="10000000"
        android:progress="10000000"
        android:progressDrawable="@drawable/timer_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/board"
        app:layout_constraintBottom_toBottomOf="@id/board"
        app:layout_constraintHeight="0dp"
        app:layout_constraintWidth="320dp"
        tools:alpha="0.2"
        tools:progress="7500000" />

    <TextView
        android:id="@+id/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/league_spartan_bold"
        android:textSize="44sp"
        android:text="@string/sessions"
        android:translationY="-80dp"
        app:layout_constraintBottom_toBottomOf="@id/timerProgressBar"
        app:layout_constraintEnd_toEndOf="@id/timerProgressBar"
        app:layout_constraintStart_toStartOf="@id/timerProgressBar"
        app:layout_constraintTop_toTopOf="@id/timerProgressBar"
        />

    <TextView
        android:id="@+id/session_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/league_spartan_bold"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/timerProgressBar"
        app:layout_constraintEnd_toEndOf="@id/timerProgressBar"
        app:layout_constraintStart_toStartOf="@id/timerProgressBar"
        app:layout_constraintTop_toTopOf="@id/timerProgressBar"
        tools:text="[amt]" />

    <com.c242_ps009.habitsaga.ui.views.Card3dView
        android:id="@+id/decrement_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        app:color="@color/inc_dec_btn_color"
        app:layout_constraintBottom_toBottomOf="@id/session_amt"
        app:layout_constraintEnd_toStartOf="@id/session_amt"
        app:layout_constraintTop_toTopOf="@id/session_amt"
        app:shadowColor="@color/inc_dec_btn_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_regular"
                android:text="@string/decrement"
                android:textAlignment="center"
                android:textColor="@color/inc_dec_text"
                android:textSize="32sp"
                android:translationY="-12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.c242_ps009.habitsaga.ui.views.Card3dView>

    <com.c242_ps009.habitsaga.ui.views.Card3dView
        android:id="@+id/increment_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:color="@color/inc_dec_btn_color"
        app:layout_constraintBottom_toBottomOf="@id/session_amt"
        app:layout_constraintStart_toEndOf="@id/session_amt"
        app:layout_constraintTop_toTopOf="@id/session_amt"
        app:shadowColor="@color/inc_dec_btn_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_regular"
                android:text="@string/increment"
                android:textAlignment="center"
                android:textColor="@color/inc_dec_text"
                android:textSize="32sp"
                android:translationY="-10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.c242_ps009.habitsaga.ui.views.Card3dView>

    <com.c242_ps009.habitsaga.ui.views.Card3dView
        android:id="@+id/start_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:color="@color/inc_dec_btn_color"
        app:layout_constraintBottom_toBottomOf="@id/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:shadowColor="@color/inc_dec_btn_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/start"
                android:textAlignment="center"
                android:textColor="@color/inc_dec_text"
                android:textSize="24sp"
                android:translationY="-2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.c242_ps009.habitsaga.ui.views.Card3dView>

    <com.c242_ps009.habitsaga.ui.views.Card3dView
        android:id="@+id/reset_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:color="@color/inc_dec_btn_color"
        app:layout_constraintTop_toBottomOf="@id/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:shadowColor="@color/inc_dec_btn_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textColor="@color/inc_dec_text"
                android:textSize="24sp"
                android:translationY="-2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.c242_ps009.habitsaga.ui.views.Card3dView>

    <TextView
        android:id="@+id/session_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:alpha="0"
        android:fontFamily="@font/league_spartan_regular"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/board"
        tools:alpha="100"
        tools:text="\?/?\nSessions Completed" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/diagonal_shade"
        android:scaleType="fitXY"
        android:src="@drawable/bg_shade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>