<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ui.shop.ShopActivity">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:elevation="4dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:title="Shop"/>-->

    <TextView
        android:id="@+id/coins_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/league_spartan_bold"
        android:textSize="22sp"
        android:textColor="#F8B324"
        android:drawablePadding="5dp"
        tools:text="[Currency]"
        app:drawableRightCompat="@drawable/ic_coin"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"/>

    <ImageView
        android:id="@+id/container_3d_support"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/container"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="34dp"
        android:layout_marginHorizontal="22dp"
        android:contentDescription="@string/_3d_support"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/container"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_layout">
            <Button
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:backgroundTint="#C8C8C8"
                android:background="@drawable/ic_back"/>
            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:padding="10dp"
                android:fontFamily="@font/league_spartan_bold"
                android:textSize="28sp"
                android:textColor="#C8C8C8"
                android:gravity="center"
                android:text="@string/shop"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rv_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_detail">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.c242_ps009.habitsaga.ui.views.Card3dView
                    android:id="@+id/filter_chars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingVertical="6dp"
                    android:paddingHorizontal="12dp"
                    app:color="#FFFFFF"
                    app:shadowColor="#C8C8C8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/league_spartan_bold"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:text="@string/characters"/>
                </com.c242_ps009.habitsaga.ui.views.Card3dView>
                <com.c242_ps009.habitsaga.ui.views.Card3dView
                    android:id="@+id/filter_accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingVertical="6dp"
                    android:paddingHorizontal="12dp"
                    app:color="#FFFFFF"
                    app:shadowColor="#C8C8C8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/league_spartan_bold"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:text="@string/accessories"/>
                </com.c242_ps009.habitsaga.ui.views.Card3dView>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:padding="20dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_detail"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="18dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintTop_toBottomOf="@id/rv_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/item_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_bold"
                android:textSize="24sp"
                android:textColor="#C8C8C8"
                android:layout_marginBottom="4dp"
                tools:text="Item Name"/>
            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:drawablePadding="5dp"
                android:fontFamily="@font/league_spartan_bold"
                android:textSize="20sp"
                android:textColor="#44BB44"
                app:drawableLeftCompat="@drawable/ic_coin"
                tools:text="[Price]"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:visibility="gone"
            android:progressBackgroundTint="#C8C8C8"
            android:progressTint="#C8C8C8"
            android:indeterminateTint="#C8C8C8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:visibility="gone"
            app:fabCustomSize="48dp"
            app:maxImageSize="48dp"
            android:outlineProvider="none"
            app:backgroundTint="#C8C8C8"
            app:tint="?android:attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/refresh_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tvOwned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:visibility="invisible"
        android:fontFamily="@font/league_spartan_bold"
        android:textSize="28sp"
        android:textColor="#44AA44"
        android:text="@string/owned"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.c242_ps009.habitsaga.ui.views.Card3dView
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:paddingVertical="6dp"
        android:paddingHorizontal="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/league_spartan_bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/buy"/>
    </com.c242_ps009.habitsaga.ui.views.Card3dView>
</androidx.constraintlayout.widget.ConstraintLayout>